--- a/composer.json
+++ b/composer.json
@@ -6,21 +6,21 @@
     "license": "MIT",
     "require": {
         "php": "^8.1.12",
-        "guzzlehttp/guzzle": "^7.5.0",
+        "guzzlehttp/guzzle": "^7.7.0",
         "laravel/framework": "^10.0.3",
-        "laravel/tinker": "^2.8.0",
-        "laravel/ui": "^4.2.0",
+        "laravel/tinker": "^2.8.1",
         "livewire/livewire": "^2.11.2",
-        "spatie/laravel-backup": "^8.1.7",
-        "spatie/laravel-ignition": "^2.0.0",
-        "spatie/laravel-permission": "^5.9.1"
+        "spatie/laravel-backup": "^8.1.11",
+        "spatie/laravel-ignition": "^2.2.0",
+        "spatie/laravel-permission": "^5.10.2"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.21.0",
-        "laravel/sail": "^1.20.2",
-        "mockery/mockery": "^1.5.1",
-        "nunomaduro/collision": "^7.0.3",
-        "phpunit/phpunit": "^10.0.7"
+        "fakerphp/faker": "^1.23.0",
+        "laravel/breeze": "^1.21",
+        "laravel/sail": "^1.23.1",
+        "mockery/mockery": "^1.6.4",
+        "nunomaduro/collision": "^7.7.0",
+        "phpunit/phpunit": "^10.2.6"
     },
     "autoload": {
         "psr-4": {
@@ -56,6 +56,6 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
