--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.2",
         "@vitejs/plugin-react": "^3.0.1",
         "@vitejs/plugin-vue": "^4.0.0",
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.2",
         "axios": "^0.21",
         "laravel-vite-plugin": "^0.7.3",
         "lodash": "^4.17.19",
+        "postcss-import": "^15.1.0",
         "sass": "^1.58.0",
+        "tailwindcss": "^3.1.0",
         "vite": "^4.0.4"
-    },
-    "dependencies": {
-        "@popperjs/core": "^2.11.6",
-        "bootstrap": "^5.2.3"
     }
 }
